Fixed search not working

--- a/www-public/index.html
+++ b/www-public/index.html
@@ -119,7 +119,7 @@
         table = document.getElementById("KeyTable");
         tr = table.getElementsByTagName("tr");
         for (i = 0; i < tr.length; i++) {
-          td = tr[i].getElementsByTagName("td")[0];
+          td = tr[i].getElementsByTagName("td")[1]; //Cullom ID of the table to search for
           if (td) {
             txtValue = td.textContent || td.innerText;
             if (txtValue.toUpperCase().indexOf(filter) > -1) {
