--- a/www-public/index.html
+++ b/www-public/index.html
@@ -220,6 +220,54 @@
         }
       }
 
+      function GoTo_giftkey(KeyID){
+        const getUrl = window.location;
+        const baseUrl = getUrl.protocol + "//" + getUrl.host + "/";
+        
+        const posting = $.ajax({
+          url: `${baseUrl}api/application/gifts/create`,
+          type: "POST",
+          contentType: "application/json; charset=utf-8",
+          headers: { Authorization: "Bearer " + localStorage.getItem("token") },
+          data: JSON.stringify({KeyID: KeyID}),
+          success: function (Gift) {
+            console.log(Gift);
+          },
+          error: function (err) {
+            console.log(err)
+            if (err.status === 429) {
+              SnackBar({
+                message: `Error 429 - Too many requests`,
+                width: "400px",
+                speed: SnackBox_Timeout,
+                position: SnackBox_Location,
+                status: "error",
+              });
+            } else if (err.status === 500) {
+              SnackBar({
+                message: `Error 500 - Internal Server Error`,
+                width: "400px",
+                speed: SnackBox_Timeout,
+                position: SnackBox_Location,
+                status: "error",
+              });
+            } else if (
+              err.status === 401 ||
+              err.status === 400 ||
+              err.status === 403
+            ) {
+              SnackBar({
+                message: `Error ${err.status} - ${err.responseJSON.Message}`,
+                width: "400px",
+                speed: SnackBox_Timeout,
+                position: SnackBox_Location,
+                status: "error",
+              });
+            }
+          }
+        });
+      }
+
       function GoTo_infokey(KeyID) {
         const getUrl = window.location;
         const baseUrl = getUrl.protocol + "//" + getUrl.host + "/";
