Delete token from localstorage if invalid

--- a/www-public/index.html
+++ b/www-public/index.html
@@ -195,7 +195,12 @@
                 name="mykeys"
                 onchange="initTable()"
             />Show only my keys
-        `);
+          `);
+          });
+
+          posting.fail(function (err) {
+            localStorage.removeItem("token");
+            localStorage.removeItem("username");
           });
         }
       }
