--- a/www-public/index.html
+++ b/www-public/index.html
@@ -236,7 +236,15 @@
           headers: { Authorization: "Bearer " + localStorage.getItem("token") },
           data: JSON.stringify({KeyID: KeyID}),
           success: function (Gift) {
-            console.log(Gift);
+            navigator.clipboard.writeText(`${baseUrl}api/application/gifts/claim?KEY_ID=${Gift.URL_Token}`);
+            SnackBar({
+                message: `Copied gift of ${Gift.Key_Name} to clipboard`,
+                width: "600px",
+                speed: SnackBox_Timeout,
+                position: SnackBox_Location,
+                status: "success",
+              });
+              getTableData();
           },
           error: function (err) {
             console.log(err)
@@ -250,7 +258,7 @@
               });
             } else if (err.status === 500) {
               SnackBar({
-                message: `Error 500 - Internal Server Error`,
+                message: `Error ${err.status} - ${err.responseJSON.Message}`,
                 width: "400px",
                 speed: SnackBox_Timeout,
                 position: SnackBox_Location,
@@ -259,7 +267,8 @@
             } else if (
               err.status === 401 ||
               err.status === 400 ||
-              err.status === 403
+              err.status === 403 ||
+              err.status === 410
             ) {
               SnackBar({
                 message: `Error ${err.status} - ${err.responseJSON.Message}`,
@@ -286,7 +295,7 @@
             const options = { hour: '2-digit', minute: '2-digit', year: 'numeric', month: 'numeric', day: 'numeric' };
             SnackBar({
               message: `Name: ${keystatus.name}<br>Owner: ${keystatus.owner}<br>Added at ${new Date(keystatus.created_at).toLocaleDateString('de-DE', options)}<br>Status: ${PossibleKeyStatusText[keystatus.status - 1]} seit ${new Date(keystatus.status_modifyed).toLocaleDateString('de-DE', options)}`,
-              with: "400px",
+              with: "600px",
               speed: SnackBox_Timeout+4,
               position: SnackBox_Location,
               status: "success",
