--- a/www-public/index.html
+++ b/www-public/index.html
@@ -236,7 +236,7 @@
           headers: { Authorization: "Bearer " + localStorage.getItem("token") },
           data: JSON.stringify({KeyID: KeyID}),
           success: function (Gift) {
-            navigator.clipboard.writeText(`${baseUrl}api/application/gifts/claim?KEY_ID=${Gift.URL_Token}`);
+            navigator.clipboard.writeText(`${baseUrl}claim?URL_Token=${Gift.URL_Token}`);
             SnackBar({
                 message: `Copied gift of ${Gift.Key_Name} to clipboard`,
                 width: "600px",
