--- a/www-public/index.html
+++ b/www-public/index.html
@@ -193,7 +193,7 @@
                 style="margin-bottom: 15px; margin-right: 5px"
                 id="mykeys"
                 name="mykeys"
-                onchange="initTable()"
+                onchange="getTableData()"
             />Show only my keys
           `);
           });
